# ros2-autonomous-robot_mapping_localization

./: .gitignore  README.md
firmware/: final(i).ino  final(ii).ino  hub_motor_with_encoder(3).ino  imu.ino
src/: .project.txt
src/encoder_odometry/: CMakeLists.txt  package.xml
src/encoder_odometry/rviz/: odom_config.rviz
src/encoder_odometry/src/: encoder_odom_node.cpp
src/imu_pkg/: CMakeLists.txt  package.xml
src/imu_pkg/launch/: imu.launch.py
src/imu_pkg/src/: imu_node.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: view_robot.launch.py
src/my_robot_description/meshes/rosmaster_x3/visual/: Arm_base_link.STL  LB_above_link.STL  LB_below_link.STL  LF_above_link.STL  LF_below_link.STL  LM_link.STL  RB_above_link.STL  RB_below_link.STL  RF_above_link.STL  RF_below_link.STL  RM_link.STL  camera_holder.STL  end_effector.stl  j1_arm_link.STL  j2_arm_link.STL  j3_arm_link.STL  j4_arm_link.STL  j5_arm_link.STL  j6_arm_link.STL
src/my_robot_description/robot_stl/: final2.xml
src/my_robot_description/rviz/: view_robot.rviz
src/my_robot_description/urdf/: final2.xml
src/my_robot_description/urdf/sensors/: lidar.urdf.xacro  rgbd_camera.urdf.xacro
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/config/: slam_params.yaml
src/robot_bringup/launch/: full_system.launch.py  lidar.launch.py  odom_bringup.launch.py  slam.launch.py
