<?xml version="1.0"?>
<package format="3">

  <name>my_robot_description</name>
  <version>0.1.0</version>

  <description>
    URDF/Xacro and meshes for my differential drive robot.
    Used for visualization and TF via robot_state_publisher.
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
